--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 <main>
   <h1>Raffle Draw</h1>
   <img
-    src="https://res.cloudinary.com/dyytydd9j/image/upload/v1582118357/a20_nask2y.webp"
+    src="https://res.cloudinary.com/dyytydd9j/image/upload/f_auto,q_auto/v1582118357/a20_nask2y.webp"
     alt="Samsung a20"
   />
 
