--- a/client/src/app/raffle-form-page/raffle-form-page.component.scss
+++ b/client/src/app/raffle-form-page/raffle-form-page.component.scss
@@ -42,8 +42,21 @@ h1 {
 .button-container {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  .error-message {
+    text-align: center;
+    color: red;
+    margin: 0.5rem 0;
+  }
 
   button {
     margin: 1.5rem 0;
+    height: 50px;
+    width: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
