--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -6,7 +6,7 @@
   />
 
   <p>Enter the raffle for a chance to win a Samsung A20</p>
-  <button mat-raised-button color="accent" routerLink="/raffle/apply">
+  <button mat-raised-button color="accent" routerLink="/apply">
     Enter Raffle Draw
   </button>
 </main>
