--- a/client/src/app/raffle-form-page/raffle-form-page.component.scss
+++ b/client/src/app/raffle-form-page/raffle-form-page.component.scss
@@ -2,6 +2,14 @@
   margin-top: 2rem;
 }
 
+.loading-section {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1rem;
+}
+
 h1 {
   font-size: 2rem;
   text-align: center;
