--- a/client/src/app/raffle-submission-page/raffle-submission-page.component.html
+++ b/client/src/app/raffle-submission-page/raffle-submission-page.component.html
@@ -40,6 +40,7 @@
       <p class="good-luck">Good Luck!</p>
     </mat-card-content>
   </mat-card>
+  <a routerLink="/" class="link-home">Go to the Homepage >>></a>
   <img
     src="https://res.cloudinary.com/dyytydd9j/image/upload/v1582154109/PHOTO-2020-02-17-20-05-27_daal4i.jpg"
     alt="event banner"
