--- a/client/src/app/raffle-submission-page/raffle-submission-page.component.scss
+++ b/client/src/app/raffle-submission-page/raffle-submission-page.component.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  overflow: hidden;
 }
 
 .details-container {
@@ -46,4 +47,8 @@
   object-fit: contain;
   margin-top: 2rem;
   height: 50vh;
+}
+
+.link-home {
+  margin-top: 1rem;
 }
